[package]
name = "meow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.18", features = ["json"]}
serde = "1.0.178"
serde_derive = "1.0.178"
serde_json = "1.0.104"
tokio = {version = "1.29.1", features = ["full"]}
colored = "2"
zstd = "0.12.4"
tar = "0.4.39"
nix = {version = "0.26.2", features = ["user"]}
toml = "0.7.6"

[profile.release]
strip = true
opt-level = "s" 
lto = true
codegen-utils = 1
